# MKP-PRINT

./: .gitignore  DOCUMENTACION.md  INSTRUCTIVO.md  README.md  requirements.txt  scripts_generate_pdf.py  watch_print.ini  watch_print.ini.example
CUPS_1.6/src/: Makefile  Makefile.am  Makefile.in  generic-dp_honeywell.drv  generic-dp_honeywell_px940.drv  generic-dpl_honeywell.drv  honeywell-dpl-drv  intermec-dp-drv  pbmtodp
CUPS_1.6/src/.deps/: pbmtodp.Po
CUPS_1.6/src/ppdhoneywell/: honeywell-dp-pc42d-203.ppd  honeywell-dp-pc42t-203.ppd  honeywell-dp-pd45-203.ppd  honeywell-dp-pd45-300.ppd  honeywell-dp-pd45s-203.ppd  honeywell-dp-pd45s-300.ppd  honeywell-dp-pm42-203.ppd  honeywell-dp-pm42-300.ppd  honeywell-dp-pm42-406.ppd  honeywell-dp-pm45-203.ppd  honeywell-dp-pm45-300.ppd  honeywell-dp-pm45-406.ppd  honeywell-dp-pm45-600.ppd  honeywell-dp-pm45c-203.ppd  honeywell-dp-pm45c-300.ppd  honeywell-dp-pm45c-406.ppd  honeywell-dp-pm45c-600.ppd  honeywell-dp-px240-203.ppd  honeywell-dp-px240-300.ppd  honeywell-dp-px240s-203.ppd  honeywell-dp-px240s-300.ppd  honeywell-dp-px4ie-203.ppd  honeywell-dp-px4ie-300.ppd  honeywell-dp-px4ie-406.ppd  honeywell-dp-px6ie-203.ppd  honeywell-dp-px6ie-300.ppd  honeywell-dp-px940A-203.ppd  honeywell-dp-px940A-300.ppd  honeywell-dp-px940A-600.ppd  honeywell-dp-px940V-203.ppd  honeywell-dp-px940V-300.ppd  honeywell-dp-px940V-600.ppd  honeywell-dp.ppd  honeywell-dpl-mpcompact4-203.ppd  honeywell-dpl-mpcompact4-300.ppd  honeywell-dpl-mpnova4-203.ppd  honeywell-dpl-mpnova4-300.ppd  honeywell-dpl-mpnova6-203.ppd  honeywell-dpl-rp2.ppd  (+2 more)
(+70 files in other folders)
